     so perdition can be installed without the dependancies that
     these bring.
   - Added IMAP4REV1 to IMAP4_CAPABILITIES in imap4_write.h to fix
     incompatibility with Outlook 5. Thanks to Valtteri Vuorikoski
   - LDAP popmax fix for values with only one attribute
     courtesy of Jeremy Nelson 
   - Added perdition_LDFLAGS = -Wl,--rpath -Wl,@prefix@ to
     perdition/Makefile.am to aid finding modules.
     Thanks to Arvid Requate
   - Added NIS map, thanks to Nathan Neulinger
   - Removed uneccessary macros in config parsing code
   - Fixed freeing of sturcture for default server 
   - Tidied up build and added debian directory so debian packages can
     be build.
   - Bind Address now dictates source address for conections to real
     servers
   - Greet with reverse DNS of bind_address if given.
     An option is supplied to disable this behaviour
   - Added quiet option which allows for logging only of (fatal) 
     internal errors
   - More powerful configuration file parser. In particular
     empty values may be specified and # (hash) characters may
     be in keys or values.
   - Buffered reads from client during authentication (and about time too)
   - Empty passwords are accepted. This is a mechanism, not a policy.
   - Syslog facility or file may be specified for logging
   - Added some man pages.
   - Added debian package support.
   


----------------------------------------------------------------------

2nd May 2000
(Horms)

   * Version 0.1.5
   - Removed bug that caused 0.1.4 not to background when in stand
     alone mode.
   - Fixed potential buffer overun problems in perditiondb_mysql
   - Added dbhost configuration parameter to perditiondb_mysql
   - Ported perditiondb_mysql to perditiondb_postgresql
   - POP3 now quits cleanly
   - Will now build on systems without gdbm headers.

----------------------------------------------------------------------

15th April 2000
(Horms)

   * Version 0.1.4