@@ -40,3 +40,4 @@ that facilitated the code you see before you;
 * Trevor, my flat in NY, NY, USA
 * Various Trans-Atlantic Flights
 * Kim's apartment, Amsterdam, The Netherlands
+* Lobster Lab, K and Struan's appartment, Pyrmont, Sydney, NSW, Australia
